# HALArduino

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.py  conanfile.py
cmake/Platform/: Arduino.cmake
profiles/: default
src/: ArduinoHardwareSerial.cpp  ArduinoHardwareSerial.h  ArduinoProgramMemory.cpp  CMakeLists.txt
test_package/: CMakeLists.txt  conanfile.py  example.ino
